tests/ui/issues/issue-65230.stderr
error[E0308]: mismatched types
  --> $DIR/issue-65230.rs:8:13
   |
LL | impl T1 for &dyn T2 {}
   |             ^^^^^^^ lifetime mismatch
   |
   = note: expected trait `<&dyn T2 as T0>`
              found trait `<&(dyn T2 + 'static) as T0>`
note: the anonymous lifetime as defined here...
  --> $DIR/issue-65230.rs:8:13
   |
LL | impl T1 for &dyn T2 {}
   |             ^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
